# speed-bff

./: .env.sample  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: __init__.py  config.py  main.py
app/analytics/: logger.py  run_test_logger.py
app/api/: __init__.py  analytics.py  authentication.py  matching.py  speed.py
app/controllers/: analytics.py  authentication.py  matching.py
app/dto/: analytics.py  auth.py  card.py  dragonfly_player.py  dragonfly_room.py  dragonfly_waitroom.py  gamestate.py  response_dto.py  ws_player_events.py
app/event_handlers/: __init__.py  player.py
app/models/: event.py  game.py  player.py
app/repositories/: dragonfly_matching_system.py  dragonfly_player.py  dragonfly_room.py  dragonfly_waitroom.py  postgres_player.py
app/services/: dragonfly.py  ws_player.py  ws_room.py
app/utils/: constants.py  create_app.py  dragonfly_helpers.py  response_builder.py  ws_helpers.py
migrations/versions/: 402b1a35f13a_initial_migration_with_player_and_.py
postman_collections/: speed.json
